--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@ p {
 </style>
 </head>
 <body>
-<h1>Seven Segments</h1>
+<h1>Seven Segment</h1>
 <div id="author">by: I-Chen Jwo (ijwo)</div>
-<p>Two players have to color the bar on the game board and try to connect the bars into numbers.
+<p>Two players have to color the bars on the game board and try to connect the bars into numbers.
 	If the player successfully colored a full number, the player could get the score of that number.</p>
 <!-- the <div> wrapping this image centers it on the page. -->
 <!-- TODO: drawing showing the main view of the game during play -->
@@ -73,6 +73,7 @@ if the player successfully connected the gray bars into 6, the player could get 
 </p>
 
 <h2>Gameplay</h2>
+<p>Use WASD to select the bar and hit enter to color the bar.</p>
 <p>There are two modes for this game. The player with higher score wins.
 <ul>
 	<li>Mode1: the players are only allowed to color one bar at the time
