--- a/index.html
+++ b/index.html
@@ -76,9 +76,8 @@ if the player successfully connected the gray bars into 6, the player could get 
 <p>Use WASD to select the bar and hit enter to color the bar.</p>
 <p>There are two modes for this game. The player with higher score wins.
 <ul>
-	<li>Mode1: the players are only allowed to color one bar at the time
-and only one player is allowed to move at the time. Two players take turns until the board couldn't be colored anymore.</li>
-	<li>Mode2: the players are allowed to move unlimited moves in one minute or until the board is full.
+	<li>Mode1: Only one player is allowed to color one bar at the same time. Two players take turns until the board couldn't be colored anymore.</li>
+	<li>Mode2: The players are allowed to move unlimited moves in one minute or until the board is full.
 Also, Two players could play at the same time. </li>
 </ul>
 
